crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI047_PYI047.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI047.py:6:1: PYI047 (unused-private-type-alias) Private TypeAlias `_UnusedPrivateTypeAlias` is never used
  |
6 | _UnusedPrivateTypeAlias: TypeAlias = int | None
  | ^^^^^^^^^^^^^^^^^^^^^^^ PYI047 (unused-private-type-alias)
7 | _T: typing.TypeAlias = str
  |

PYI047.py:7:1: PYI047 (unused-private-type-alias) Private TypeAlias `_T` is never used
  |
6 | _UnusedPrivateTypeAlias: TypeAlias = int | None
7 | _T: typing.TypeAlias = str
  | ^^ PYI047 (unused-private-type-alias)
8 |
9 | # OK
  |

PYI047.py:24:6: PYI047 (unused-private-type-alias) Private TypeAlias `_UnusedPEP695` is never used
   |
22 | def func2(arg: _PrivateTypeAlias) -> None: ...
23 |
24 | type _UnusedPEP695 = int
   |      ^^^^^^^^^^^^^ PYI047 (unused-private-type-alias)
25 | type _UnusedGeneric695[T] = list[T]
   |

PYI047.py:25:6: PYI047 (unused-private-type-alias) Private TypeAlias `_UnusedGeneric695` is never used
   |
24 | type _UnusedPEP695 = int
25 | type _UnusedGeneric695[T] = list[T]
   |      ^^^^^^^^^^^^^^^^^ PYI047 (unused-private-type-alias)
26 |
27 | type _UsedPEP695 = str
   |
