crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI050_PYI050.py.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI050.py:13:24: PYI050 (no-return-argument-annotation-in-stub) Prefer `typing.Never` over `NoReturn` for argument annotations
   |
13 | def foo_no_return(arg: NoReturn):
   |                        ^^^^^^^^ PYI050 (no-return-argument-annotation-in-stub)
14 |     ...
   |

PYI050.py:18:10: PYI050 (no-return-argument-annotation-in-stub) Prefer `typing.Never` over `NoReturn` for argument annotations
   |
17 | def foo_no_return_typing_extensions(
18 |     arg: typing_extensions.NoReturn,
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^ PYI050 (no-return-argument-annotation-in-stub)
19 | ):
20 |     ...
   |

PYI050.py:23:44: PYI050 (no-return-argument-annotation-in-stub) Prefer `typing.Never` over `NoReturn` for argument annotations
   |
23 | def foo_no_return_kwarg(arg: int, *, arg2: NoReturn):
   |                                            ^^^^^^^^ PYI050 (no-return-argument-annotation-in-stub)
24 |     ...
   |

PYI050.py:27:47: PYI050 (no-return-argument-annotation-in-stub) Prefer `typing.Never` over `NoReturn` for argument annotations
   |
27 | def foo_no_return_pos_only(arg: int, /, arg2: NoReturn):
   |                                               ^^^^^^^^ PYI050 (no-return-argument-annotation-in-stub)
28 |     ...
   |

PYI050.py:35:21: PYI050 (no-return-argument-annotation-in-stub) Prefer `typing.Never` over `NoReturn` for argument annotations
   |
35 | def stringized(arg: "NoReturn"):
   |                     ^^^^^^^^^^ PYI050 (no-return-argument-annotation-in-stub)
36 |     ...
   |
